--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-    max-width: 1240px;
+    max-width: 1300px;
     margin: 50px auto;
 }
 
@@ -79,3 +79,82 @@ header {
 }
 
 /* header section style end */
+
+/* players blogs start */
+.players-blogs {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.toggle-buttons {
+    width: 312px;
+    height: 312px;
+    background-color: #161616;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    padding: 30px;
+}
+
+.toggle-button {
+    /* display: block; */
+    color: #161616;
+    background-color: #ffffff;
+    text-align: center;
+    padding: 16px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#colored-button {
+    background-color: #3CCF4E;
+    color: #ffffff;
+}
+
+.player-cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.card {
+    width: 300px;
+    /* height: 362px; */
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+.card-image img{
+    width: 100%;
+}
+
+.card-details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 18px;
+    gap: 15px;
+}
+
+.card-button{
+    padding: 5px 10px;
+    background: none;
+    font-family: inherit;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.card-details h4 {
+    font-weight: 600;
+    font-size: 18px;
+    color: #161616;
+}
+
+/* players blogs end */
