--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@ header {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-top: 100px;
 }
 
 .toggle-buttons {
@@ -117,7 +118,7 @@ header {
     color: #ffffff;
 }
 
-.player-cards{
+.player-cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -130,7 +131,7 @@ header {
     border-radius: 10px;
 }
 
-.card-image img{
+.card-image img {
     width: 100%;
 }
 
@@ -142,7 +143,7 @@ header {
     gap: 15px;
 }
 
-.card-button{
+.card-button {
     padding: 5px 10px;
     background: none;
     font-family: inherit;
@@ -158,3 +159,69 @@ header {
 }
 
 /* players blogs end */
+
+/* footer start */
+footer {
+    height: 440px;
+    background: #161616;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 100px;
+}
+
+hr {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    width: 90%;
+}
+
+footer h2 {
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 40px;
+    text-align: center;
+}
+
+/* navigation section */
+nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.navigation {
+    display: flex;
+    gap: 30px;
+}
+
+.navigation li {
+    list-style: none;
+}
+
+.navigation li a {
+    color: #B9B9B9;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.icon {
+    background-color: #3CCF4E;
+    width: 50px;
+    height: 50px;
+    display: block;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon i {
+    color: #161616;
+    font-size: 20px;
+}
+
+/* footer end */
