--- a/styles/style.css
+++ b/styles/style.css
@@ -328,7 +328,7 @@ nav {
         margin: 0;
     }
 
-    .player-cards {
+    .player-cards, .match-cards {
         grid-template-columns: repeat(1, 1fr);
     }
 
