--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,14 @@ header {
     text-decoration: none;
     padding: 16px 25px;
     border-radius: 5px;
+    font-weight: 600;
+    transition: all ease-in 0.5s;
+    box-shadow: inset 0 0 0 0 #f9e506;
+}
+
+.banner-btn .link-btn:hover{
+    box-shadow: inset 200px 0 0 0 #f9e506;
+    color: #161616;
 }
 
 .top-banner .banner-image {
@@ -124,7 +132,6 @@ header {
 
 .card {
     width: 300px;
-    /* height: 362px; */
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
@@ -158,7 +165,11 @@ header {
 
 .card-info {
     display: flex;
-    gap: 12px;
+    gap: 16px;
+}
+
+.card-info > div > i{
+    margin-right: 5px;
 }
 
 /* players blogs end */
@@ -205,8 +216,8 @@ header {
 
 /* Match cards end */
 
-/* view button */
-#view-btn{
+/* view button start*/
+#view-btn {
     display: none;
 }
 
@@ -220,6 +231,8 @@ header {
     font-size: 20px;
     font-family: inherit;
 }
+
+/* view button end*/
 
 /* footer start */
 footer {
@@ -282,7 +295,7 @@ nav {
 }
 
 .icon i {
-    color: #161616;
+    color: #ffffff;
     font-size: 20px;
 }
 
@@ -298,6 +311,7 @@ nav {
         width: 100%;
     }
 
+    /* Top Blogs */
     .top-banner {
         flex-direction: column;
         align-items: center;
@@ -343,7 +357,7 @@ nav {
         align-items: center;
         margin: 0;
     }
-
+    /* Player cards */
     .player-cards,
     .match-cards {
         grid-template-columns: repeat(1, 1fr);
@@ -360,7 +374,7 @@ nav {
     .toggle-button {
         border: 1px solid #E8E8E8;
     }
-
+    /* Footer */
     footer {
         margin-top: 24px;
         gap: 20px;
@@ -387,7 +401,7 @@ nav {
     .container {
         width: 100%;
     }
-
+    /* Top Banner */
     .top-banner {
         align-items: flex-start;
         justify-content: space-between;
@@ -424,7 +438,7 @@ nav {
         font-size: 12px;
         padding: 12px;
     }
-
+    /* Players Blogs */
     .players-blogs {
         flex-direction: column;
         align-items: center;
@@ -446,12 +460,12 @@ nav {
     .match-cards {
         grid-template-columns: repeat(2, 1fr);
     }
-
+    /* Footer */
     footer {
         margin-top: 70px;
     }
 
-    #view-btn{
+    #view-btn {
         display: block;
     }
 }
@@ -461,7 +475,7 @@ nav {
     .container {
         width: 100%;
     }
-
+    /* Top Banner */
     .top-banner {
         align-items: flex-start;
         justify-content: space-between;
@@ -494,7 +508,7 @@ nav {
         width: 100%;
     }
 
-
+    /* Player cards */
     .player-cards,
     .match-cards {
         grid-template-columns: repeat(2, 1fr);
